# color-lsp

./: CONTRIBUTING.md  Cargo.toml  Makefile
.github/workflows/: release-extension.yml  release.yml
color-lsp/: Cargo.toml
color-lsp/src/: lib.rs  lsp.rs  main.rs  parser.rs  utils.rs
tests/: test.json
zed-color-highlight/: Cargo.toml  README.md  extension.toml
zed-color-highlight/src/: lib.rs
