[workspace]
members = ["color-lsp", "zed-color-highlight"]

default-members = ["color-lsp"]
resolver = "2"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

