[package]
name = "color-lsp"
description = "A document color language server that supports various color formats, such as HEX, RGB, HSL, and named colors."
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = [
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
tower-lsp = "0.20.0"
csscolorparser = "0.7"
indoc = "2"
